# covid-19-Chile

./: covid-19 chile.ipynb  index.html  pyproject.toml
app/: DailyReport.py  Total.py  __init__.py
command/: task.py
database/: __init__.py  data.db
routes/: api.py
tests/: test_app.py
